--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite --mode development",
+    "dev:local": "vite --mode local",
+    "build:dev": "vite build --mode development",
+    "build:pro": "vite build --mode production",
+    "type-check": "npx vue-tsc --build --force",
+    "lint": "npx eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "npx prettier --write src/"
   },
   "dependencies": {
     "element-plus": "^2.5.5",
@@ -33,6 +33,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-html": "^3.2.2",
     "vue-tsc": "^1.8.27"
   }
 }
