--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "format": "npx prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "qs": "^6.11.2",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
