--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
     "typescript": "~5.3.0",
+    "unocss": "^0.58.5",
     "vite": "^5.0.11",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
   }
 }
