--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,9 @@ VITE_NODE_ENV = "production"
 # 代理地址
 VITE_PROXY_URL = ''
 
+# sso登录地址
+VITE_SSO_LOGIN_URL = ''
+
 # 是否删除生产环境 console
 VITE_DROP_CONSOLE = true
 
