--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,13 @@
 VITE_NODE_ENV = 'development'
 
 # 代理地址
-VITE_PROXY_URL = ''
+VITE_PROXY_URL = 'http://www.baidu.com'
 
-# sso登录地址
-VITE_SSO_LOGIN_URL = ''
+# 接口地址
+VITE_API_URL = ''
+
+# API前缀
+VITE_API_PREFIX = '/api'
 
 # 是否删除生产环境 console
 VITE_DROP_CONSOLE = false
