--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,14 @@
 # 线上环境
-VITE_NODE_ENV = "production"
+VITE_NODE_ENV = 'production'
 
 # 代理地址
 VITE_PROXY_URL = ''
 
-# sso登录地址
-VITE_SSO_LOGIN_URL = ''
+# 接口地址
+VITE_API_URL = ''
+
+# API前缀
+VITE_API_PREFIX = '/api'
 
 # 是否删除生产环境 console
 VITE_DROP_CONSOLE = true
