--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyp-project-demo",
+  "name": "vue3-demo",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -16,8 +16,10 @@
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
     "element-plus": "^2.5.5",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
+    "universal-cookie": "^7.1.4",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
